Fix style on App class and on Contact Page
1. Change css style of App on styles.css to correct a bug where the #eeee background does not cover the entire screen on the contact page
2. Change the shadow of the navbar
3. Change height of contact div card

Future: Put animations on some buttons and references of the videos on the svg logos pf the project cards

--- a/public/styles.css
+++ b/public/styles.css
@@ -12,8 +12,9 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     background-color: #eeee;
+    min-height: 100vh;
 }
 
 .App h1 {
