--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -6,7 +6,7 @@
     margin-top: 70px;
     gap: 48px;
     padding: 12px 48px;
-    height: 85vh;
+    height: 70vh;
     width: 45%;
     box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.74);
     border-radius: 12px;
