--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -3,11 +3,10 @@
     flex-direction: row;
     column-gap: 6px;
     padding: 12px 24px;
-    margin: 6px;
     margin-top: 12px;
     width: 95%;
     border-radius: 12px;
-    box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.74);
+    box-shadow: 0px 3px 9px 0px rgba(0,0,0,0.75);
     border-radius: 12px;
     background-color: white;
 }
